--- a/app/views/works/_work_header_navigation.html.erb
+++ b/app/views/works/_work_header_navigation.html.erb
@@ -11,17 +11,18 @@
     <li class="edit tag"><%= link_to ts("Edit Tags"), edit_tags_work_path(@work) %></li>
   <% end %>
 
+  <% query_params = normalize_work_query_params(params) %>
 
   <% # chapter navigation %>
   <% if @previous_chapter || @next_chapter %>
-    <li class="chapter entire"><%= link_to ts("Entire Work"), work_path(@work, :view_full_work => 'true') %></li>
+    <li class="chapter entire"><%= link_to ts("Entire Work"), work_path(@work, query_params.merge(:view_full_work => "true")) %></li>
 
     <% if @previous_chapter %>
-      <li class="chapter previous"><%= link_to '&#8592; '.html_safe + ts("Previous Chapter"), [@work, @previous_chapter, :anchor => "workskin"] %></li>
+      <li class="chapter previous"><%= link_to '&#8592; '.html_safe + ts("Previous Chapter"), [@work, @previous_chapter, :anchor => "workskin", :params => query_params] %></li>
     <% end %>
 
     <% if @next_chapter %>
-      <li class="chapter next"><%= link_to h(ts("Next Chapter")) + ' &#8594;'.html_safe, [@work, @next_chapter, :anchor => "workskin"] %></li>
+      <li class="chapter next"><%= link_to h(ts("Next Chapter")) + ' &#8594;'.html_safe, [@work, @next_chapter, :anchor => "workskin", :params => query_params] %></li>
     <% end %>
 
     <li class="chapter" aria-haspopup="true">
@@ -35,15 +36,18 @@
             <p>
               <% options = @chapters.map{|c| [c.abbreviated_display_title.html_safe, c.id] } %>
               <%= select_tag :selected_id, options_for_select(options, params[:id].to_i) %>
+              <% query_params.each do |param,value| %>
+                <%= hidden_field_tag param, value %>
+              <% end %>
               <span class="submit actions"><%= submit_tag ts("Go") %></span>
             </p>
           <% end %>
         </li>
-        <li><%= link_to ts("Full-page index"), navigate_work_path(@work) %></li>
+        <li><%= link_to ts("Full-page index"), navigate_work_path(@work, query_params) %></li>
       </ul>
     </li>
   <% elsif @chapters && @chapters.length > 1 %>
-    <li class="chapter bychapter"><%= link_to ts("Chapter by Chapter"), [@work, @chapter] %></li>
+    <li class="chapter bychapter"><%= link_to ts("Chapter by Chapter"), [@work, @chapter, :params => query_params.except(:view_full_work)] %></li>
   <% end %>
 
 
@@ -87,11 +91,9 @@
   <% if @work.work_skin %>
     <li class="style">
       <% if Preference.disable_work_skin?(params[:style]) %>
-        <%= link_to(ts("Show Creator's Style"),
-          params[:view_full_work] == 'true' ? url_for(:style => 'creator', :view_full_work => 'true') : url_for(:style => 'creator')) %>
+        <%= link_to(ts("Show Creator's Style"),  url_for(query_params.merge(:style => "creator"))) %>
       <% else %>
-        <%= link_to(ts("Hide Creator's Style"),
-          params[:view_full_work] == 'true' ? url_for(:style => 'disable', :view_full_work => 'true') : url_for(:style => 'disable')) %>
+        <%= link_to(ts("Hide Creator's Style"),  url_for(query_params.merge(:style => "disable"))) %>
       <% end %>
     </li>
   <% end %>
