--- a/app/views/works/navigate.html.erb
+++ b/app/views/works/navigate.html.erb
@@ -1,8 +1,9 @@
-<h2 class="heading"><%= ts("Chapter Index for") %> <%= link_to(@work.title.html_safe, @work) %> <%= ts("by") %> <%= byline(@work) %></h2>
+<% query_params = normalize_work_query_params(params) %>
+<h2 class="heading"><%= ts("Chapter Index for") %> <%= link_to(@work.title.html_safe, [@work, params: query_params]) %> <%= ts("by") %> <%= byline(@work) %></h2>
 
 <ol class="chapter index group" role="navigation">
-<% for chapter in @chapters %>
-  <li><%= link_to chapter.display_title.html_safe, [chapter.work, chapter] %> <span class="datetime">(<%= chapter.published_at.to_date %>)</span></li>
-<% end %>
+  <% for chapter in @chapters %>
+    <li><%= link_to chapter.display_title.html_safe, [chapter.work, chapter, params: query_params] %> <span class="datetime">(<%= chapter.published_at.to_date %>)</span></li>
+  <% end %>
 </ol>
 
