--- a/app/views/works/_standard_form.html.erb
+++ b/app/views/works/_standard_form.html.erb
@@ -46,7 +46,7 @@
     <legend><%= ts("Associations") %></legend>
     <h3 class="landmark heading"><%= ts("Associations") %></h3>
     <dl>
-      <% if !(@assignments = ChallengeAssignment.by_offering_user(current_user).undefaulted.unstarted.sent).empty? || !@work.challenge_assignments.empty? %>
+      <% if !(@assignments = (current_user.offer_assignments.undefaulted.unstarted + current_user.pinch_hit_assignments.undefaulted.unstarted).uniq).empty? || !@work.challenge_assignments.empty? %>
         <!-- if the user has open assignments? -->
         <dt class="collection">
           <%= f.label "challenge_assignment_ids[]", ts("Does this fulfill a challenge assignment") %>
