First attempt at porting over sorting and filtering

--- a/app/views/bookmarks/_search_form.html.erb
+++ b/app/views/bookmarks/_search_form.html.erb
@@ -40,6 +40,13 @@
       <dd>
         <%= f.text_field :bookmarkable_date %>
       </dd>
+      <dt>
+        <%= f.label :word_count, ts("Word Count") %>
+        <%= link_to_help "bookmark-search-numerical-help" %>
+      </dt>
+      <dd>
+        <%= f.text_field :word_count %>
+      </dd>
     </dl>
   </fieldset>
 
