--- a/app/views/bookmarks/_filters.html.erb
+++ b/app/views/bookmarks/_filters.html.erb
@@ -90,7 +90,7 @@
             <dl class="range">
               <dt><%= f.label :words_from, t(".filters.from") %></dt>
               <dd><%= f.text_field :words_from %></dd>
-              <dt><%= f.label :words_to, ts(".filters.to") %></dt>
+              <dt><%= f.label :words_to, t(".filters.to") %></dt>
               <dd><%= f.text_field :words_to %></dd>
             </dl>
           </dd>
