--- a/app/views/bookmarks/_search_form.html.erb
+++ b/app/views/bookmarks/_search_form.html.erb
@@ -41,7 +41,7 @@
         <%= f.text_field :bookmarkable_date %>
       </dd>
       <dt>
-        <%= f.label :word_count, t("filters.word_count") %>
+        <%= f.label :word_count, t("bookmarks.filters.word_count") %>
         <%= link_to_help "bookmark-search-numerical-help" %>
       </dt>
       <dd>
